# gureum-talk

./: .env  .gitignore  pyproject.toml
app/: main.py
app/core/: config.py
app/core/routers/: __init__.py  user.py
app/core/schemas/: __init__.py  user.py
app/core/services/: __init__.py  user.py
app/db/: database.py
app/db/sql/: schema.sql  test_data.sql
app/ml/: gureum.py
app/models/: __init__.py  user.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: axios.ts
frontend/src/components/: Footer.tsx  Header.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/pages/chat/: ChatRoom.tsx
frontend/src/pages/features/: Features.tsx
frontend/src/pages/help/: Help.tsx
frontend/src/pages/plans/: Plans.tsx
frontend/src/pages/users/: UserLoginModal.tsx  UserPasswordResetModal.tsx  UserRegisterModal.tsx
