[project]
name = "gureumtalk"
version = "0.1.0"
description = ""
authors = [
    {name = "ppoya",email = "temporary020627@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "fastapi[standard] (>=0.138.0,<0.139.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
