[project]
name = "gureumtalk"
version = "0.1.0"
description = ""
authors = [
    {name = "ppoya",email = "temporary020627@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "fastapi[standard] (>=0.138.0,<0.139.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
